# trace-log-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.nas-offline  README.md  docker-compose.nas-offline.yml  docker-compose.yml  package.json
artifacts/api/: api-mapping.md  api-signoff.md  error-code-spec.md  openapi.yaml  versioning-policy.md
artifacts/implementation/: build-report.md  change-log.md  implementation-mapping.md  implementation-plan.md  implementation-signoff.md
artifacts/ops-support-blueprint/: README.md
artifacts/requirements/: acceptance-criteria.md  open-issues.md  requirement-baseline.md  requirements-catalog.md  signoff.md
docs/: deployment-runbook.md  integration-guide.md  language-onboarding.md  log-collection-multi-source-design.md  sdk-package-distribution-design.md  system-architecture.md  system-scope-linked-dashboard-design.md
examples/backend/: express-middleware.js  koa-middleware.js  node-http.js
examples/frontend/: react-integration.jsx  vue-integration.js
public/: app.js  index.html  styles.css
scripts/: build-sdk-packages.js  smoke-test.js
sdks/java/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/trace_log_sdk/: __init__.py  client.py  integrations.py
src/: server.js
test/: analyzer.test.js  audit-api.test.js  config-api.test.js  cors-api.test.js  db-explain.test.js  db-migration.test.js  e2e.test.js  events-api.test.js  integration-packages-api.test.js  log-collectors-api.test.js  model-policy-api.test.js  openclaw-system.test.js  queue-system.test.js  system-scope-linkage.test.js
(+171 files in other folders)
