[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-log-sdk"
version = "1.0.0"
description = "Trace Log Platform Python SDK"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Trace Platform Team" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["trace_log_sdk*"]
